--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,6 +67,9 @@
         "*.icc": "cpp",
         "csetjmp": "cpp",
         "buffer": "cpp",
-        "netfwd": "cpp"
+        "netfwd": "cpp",
+        "_tess": "cpp",
+        "filesystem": "cpp",
+        "codecvt": "cpp"
     }
 }
